--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-  <title>My App</title>
+  <title>Adapt</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/" />
   <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 <body ng-app="MyApp">
   <div ui-view></div>
