changed page title

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
-<body ng-app="MyApp">
+<body ng-app="ADAPT">
   <div ui-view></div>
   <script src="js/main.min.js"></script>
 </body>
