--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Adapt</title>
+  <title>Adapt | Ecosystem Services Model</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,7 @@
 </head>
 <body ng-app="MyApp">
   <div ui-view></div>
+  <script src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-565d0a76cc39f043" type="text/javascript" async="async"></script>
   <script src="js/main.min.js"></script>
 </body>
 </html>
