added icon hash and updated header styling

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <base href="/" />
   <link rel="stylesheet" href="css/main.css">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link href='https://fonts.googleapis.com/css?family=Dosis:400,200,300,500,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body ng-app="ADAPT">
   <div ui-view></div>
